Fix calculation errors in planning and actual percentages

--- a/dr/templates/overall_progress_detail.html
+++ b/dr/templates/overall_progress_detail.html
@@ -65,12 +65,12 @@
                             <td>{{ update.week }}</td>
                             <td>{{ update.date }}</td>
                             <td>{{ update.planning }}</td>
-                            <td>{{ update.cumulative_planning }}</td>
-                            <td>{{ update.percent_planning }}%</td>
+                            <td>{{ update.get_cumulative_planning }}</td>
+                            <td>{{ update.get_planning_percentage }}%</td>
                             <td>{{ update.actual }}</td>
                             <td>{{ update.proactive }}</td>
-                            <td>{{ update.cumulative_actual }}</td>
-                            <td>{{ update.percent_actual }}%</td>
+                            <td>{{ update.get_cumulative_actual }}</td>
+                            <td>{{ update.get_actual_percentage }}%</td>
                             <td>{{ update.equipment_visited }}</td>
                             <td>{{ update.cumulative_equipment_visited }}</td>
                         </tr>
